[package]
name = "glebus_vpn_bot"
version = "0.1.0"
edition = "2024"
authors = ["Gleb Gudkov <LineGM@yandex.ru>"]
description = "Telegram bot for managing GlebusVPN connections"
repository = "https://github.com/LineGM/glebus_vpn_bot"
license = "UNLICENSE"
readme = "README.md"

[lib]
name = "glebus_vpn_bot"
path = "src/lib.rs"

[[bin]]
name = "glebus_vpn_bot"
path = "src/bin/main.rs"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
remnawave = "2.0.0"
dotenv = "0.15"
log4rs = "1.3"
dptree = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.13"
fast_qr = { version = "0.13.1", features = ["image"] }
thiserror = "2.0"
chrono = "0.4"
